exercises/04_derive/11_darling/tests/fail/on_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/fail/on_enum.rs:6:10
  |
6 | #[derive(Model)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Model` (in Nightly builds, run with -Z macro-backtrace for more info)
